<?xml version="1.0"?>
<package format="2">
  <name>ros2_gazebo_test</name>
  <version>0.0.0</version>
  <description>The ros2_gazebo_test package</description>

  <maintainer email="ecorbellini@ekumenlabs.com">Ernesto Corbellini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot_gazebo</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
